src/objects/Account_Eligible_RMU__c/Account_Eligible_RMU__c.object-meta.xml
<CustomObject>
    <label>Eligible Offering</label>
    <nameField>
        <displayFormat>AER-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligible Offerings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>