src/objects/Account_Eligible_RMU__c/validationRules/Account_Eligible_Offering_Account_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Eligible_Offering_Account_Change</fullName>
    <active>true</active>
    <description>Account_Eligible_RMU_Account_Change</description>
    <errorConditionFormula>or(
 ISCHANGED( Account__c ),
 ISCHANGED( RMU__c ) 
)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Account and Offering cannot be changed!</errorMessage>
</ValidationRule>