src/objects/Account_Eligible_RMU__c/validationRules/Account_Eligible_Offering_Disqualified.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Eligible_Offering_Disqualified</fullName>
    <active>true</active>
    <description>Account_Eligible_RMU_Disqualified</description>
    <errorConditionFormula>and(
 text( Status__c ) = &quot;Disqualified&quot;,
 or(
  ISNULL( Status_Description__c ),
  ISBLANK( Status_Description__c ) 
 )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status Description must be entered when disqualified is choosen.</errorMessage>
</ValidationRule>