src/objects/Account_Eligible_RMU__c/validationRules/Account_Eligible_Offering_Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Eligible_Offering_Future_Date</fullName>
    <active>true</active>
    <description>Account_Eligible_Offering_Future_Date</description>
    <errorConditionFormula>and(
 text( Status__c ) = &quot;Future&quot;,
 ISNULL( Future_Review_Date__c ) 
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Future Review Date must be entered when future is choosen.</errorMessage>
</ValidationRule>