src/objects/Account_Eligible_RMU__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RMU__c</columns>
    <columns>Status__c</columns>
    <columns>RMU_Tech_Sales_Leader__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Aircraft_Quantity__c</columns>
    <columns>Aircraft_Installed_Quantity__c</columns>
    <columns>RMU_Honeywell_Extended_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RMU__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>