src/objects/Account_Eligible_RMU__c/listViews/FMS.listView-meta.xml
<ListView>
    <fullName>FMS</fullName>
    <columns>RMU__c</columns>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Account__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>Account_Region__c</columns>
    <columns>Aircraft_Installed_Quantity__c</columns>
    <columns>Aircraft_On_Order_Quantity__c</columns>
    <columns>Aircraft_Open_Count__c</columns>
    <columns>Aircraft_Out_Of_Service_Quantity__c</columns>
    <columns>Aircraft_Quantity__c</columns>
    <columns>RMU_Honeywell_Extended_Price__c</columns>
    <columns>RMU_Tech_Sales_Leader__c</columns>
    <columns>RMU_Dealer_Extended_Price__c</columns>
    <columns>RMU_SBU__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RMU__c</field>
        <operation>greaterThan</operation>
        <value>FMS</value>
    </filters>
    <filters>
        <field>RMU__c</field>
        <operation>greaterThan</operation>
        <value>NGFMS</value>
    </filters>
    <filters>
        <field>RMU__c</field>
        <operation>greaterThan</operation>
        <value>WAAS</value>
    </filters>
    <label>FMS</label>
    <language>en_US</language>
</ListView>